# nyc-taxi-demand-forecasting

./: .env.example  .flake8  .gitignore  ARCHITECTURE_AND_HANDOVER.md  README.md  config.yaml  docker-compose.airflow.yml  docker-compose.observability.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pipeline.py
.dvc/: config
.github/workflows/: mlops_pipeline.yaml
.semgrep/: rules.yml
dags/: daily_inference_dag.py  data_cleaning_dag.py  hourly_inference_dag.py  monitoring_dag.py  weekly_training_dag.py
data/: daily_demand.csv  hourly_demand.csv
docker/airflow/: Dockerfile
docker/inference/: Dockerfile
docker/serving/: Dockerfile
feature_repo/: feature_store.yaml  feature_views.py
kubernetes/: inference-deployment.yaml  opa-policy.rego  serving-deployment.yaml
loadtest/: locustfile.py
observability/: README.md  prometheus.yml  statsd_mapping.yml
scripts/: backup_infra_state.sh  download_data.py  restore_infra_state.sh  run_automated_review.sh
src/common/: config.py  mlflow_config.py  promotion.py
src/data/: ingestion_cleaning.py  pii.py  quality_gate.py
src/features/: feast_pipeline.py  feature_engineer.py  materializer.py
src/forecasting/: engine.py  forecaster.py  (+1 more)
testing/: test_dag_validation.py
tests/: conftest.py  test_adversarial.py  test_dags.py  test_feature_engineer.py  test_forecaster.py  test_governance.py  test_inference_engine.py  test_ingestion.py  test_monitoring.py  test_pii.py  test_pipeline_tasks.py  test_promotion.py  test_quality_gate.py  test_serving.py  test_training.py  test_validation.py
(+14 files in other folders)
